// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-script create-script should create a script 1`] = `
{
  "message": "Script created successfully",
  "path": "/_TestScript.js",
}
`;

exports[`create-script create-script should handle existing script 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Script already exists","status":400,"detail":"A script with the same path already exists","operationStatus":"AlreadyExists"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`create-script create-script-folder should create a script folder 1`] = `
{
  "message": "Script folder created successfully",
  "path": "/_TestFolder",
}
`;

exports[`create-script create-script-folder should handle existing script folder 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Folder already exists","status":400,"detail":"The folder already exists","operationStatus":"AlreadyExists"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
